--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,12 +1,12 @@
-name: build-ublue
+name: build-mainblue
 on:
   pull_request:
   merge_group:    
   schedule:
-    - cron: '0 7 * * *'  # 7 am everyday
+    - cron: '20 20 * * *'  # 8:20pm everyday
   workflow_dispatch:
 env:
-    IMAGE_BASE_NAME: main
+    IMAGE_BASE_NAME: mainblue
     IMAGE_REGISTRY: ghcr.io/${{ github.repository_owner }}
 
 jobs:
@@ -20,7 +20,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        image_name: [silverblue, kinoite, vauxite, sericea, base, lxqt, mate]
+        image_name: [silverblue]
         major_version: [37, 38]
         include:
           - major_version: 37
@@ -29,11 +29,6 @@ jobs:
           - major_version: 38
             is_latest_version: true
             is_stable_version: true
-        exclude:
-          # There is no Fedora 37 version of sericea
-          # When F38 is added, sericea will automatically be built too
-          - image_name: sericea
-            major_version: 37
     steps: 
       # Checkout push-to-registry action GitHub repository
       - name: Checkout Push to Registry action
@@ -46,7 +41,7 @@ jobs:
           else
               echo "SOURCE_IMAGE=${{ matrix.image_name }}" >> $GITHUB_ENV
           fi
-          echo "IMAGE_NAME=${{ format('{0}-{1}', matrix.image_name, env.IMAGE_BASE_NAME) }}" >> $GITHUB_ENV
+          echo "IMAGE_NAME=${{env.IMAGE_BASE_NAME}}" >> $GITHUB_ENV
 
       - name: Generate tags
         id: generate-tags
@@ -176,4 +171,3 @@ jobs:
         if: github.event_name != 'pull_request'
         run: |
           echo "${{ toJSON(steps.push.outputs) }}"
-
