--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,7 +6,7 @@ on:
     - cron: '20 20 * * *'  # 8:20pm everyday
   workflow_dispatch:
 env:
-    IMAGE_BASE_NAME: mainblue
+    IMAGE_BASE_NAME: bluebase
     IMAGE_REGISTRY: ghcr.io/${{ github.repository_owner }}
 
 jobs:
